<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/placesimage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/japan"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/locationname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/location_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/placesimage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationdescription"
        android:layout_width="255dp"
        android:layout_height="84dp"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/black"
        android:text="@string/location_location_location"
        app:layout_constraintStart_toEndOf="@+id/placesimage"
        app:layout_constraintTop_toBottomOf="@+id/locationname"
        android:layout_marginLeft="15dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>